--- a/_layouts/about_me.html
+++ b/_layouts/about_me.html
@@ -9,7 +9,8 @@
 
 <body id="page">
 
-{% include navigation.html %}
+
+{% include navigation2.html %}
 
 <div id="main" role="main">
   <article class="entry">
