--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -123,7 +123,7 @@ hr {
 /*
    Figures and Images
    ========================================================================== */
-
+/*
 figure {
   margin: 0;
   padding-top: 10px;
@@ -154,13 +154,14 @@ svg:not(:root) {
 
 // Figure captions
 
+
 figcaption {
 	padding-top: 10px;
 	@include font-size(14);
 	line-height: 1.3;
 	color: lighten($text-color, 10);
 }
-
+*/
 
 
 // Tables
@@ -191,6 +192,7 @@ blockquote {
 tt, code, kbd, samp, pre {
 	font-family: $code-font;
 }
+/*
 p,
 li {
 	code {
@@ -209,7 +211,7 @@ pre {
 	overflow-x: auto;
 }
 
-
+*/
 
 
 
