--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -17,9 +17,11 @@ body {
   font-size: 0px + $doc-font-size;  
 }
 
-
+//Colors:
+//#ffffcc -> yellow
+//#88D4E1 -> blue
 // COLORS =====================================================
-$body-color         : #88D4E1;
+$body-color         : #ffffcc;
 $text-color         : #222;
 $base-color         : #343434;    
 $comp-color         : spin($base-color, 180); 
