change color again

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -21,7 +21,7 @@ body {
 //#ffffcc -> yellow
 //#88D4E1 -> blue
 // COLORS =====================================================
-$body-color         : #ffffcc;
+$body-color         :  #ffffe6;
 $text-color         : #222;
 $base-color         : #343434;    
 $comp-color         : spin($base-color, 180); 
